--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "google-url": "^0.0.4",
     "googleapis": "^28.1.0",
     "python-shell": "^0.5.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "sentiment": "^5.0.1"
   },
   "devDependencies": {},
   "scripts": {
