--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "forever": "^0.15.3",
     "google-url": "^0.0.4",
     "googleapis": "^28.1.0",
+    "kayn": "^0.8.24",
+    "pg": "^7.6.0",
     "python-shell": "^0.5.0",
     "request": "^2.88.0",
     "sentiment": "^5.0.1"
