--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "google-url": "^0.0.4",
     "googleapis": "^28.1.0",
     "kayn": "^0.8.26",
+    "moment-duration-format": "^2.2.2",
     "pg": "^7.6.0",
     "python-shell": "^0.5.0",
     "request": "^2.88.0",
