--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "pg": "^7.6.0",
     "python-shell": "^0.5.0",
     "request": "^2.88.0",
-    "sentiment": "^5.0.1"
+    "sentiment": "^5.0.1",
+    "snoowrap": "^1.15.2"
   },
   "devDependencies": {},
   "scripts": {
