--- a/v2/requirements.txt
+++ b/v2/requirements.txt
@@ -16,7 +16,7 @@ frozenlist==1.4.1
 graphql-core==3.2.3
 idna==3.7
 ipykernel==6.29.4
-ipython==7.22.0
+ipython==7.23.1
 ipython-genutils==0.2.0
 jedi==0.18.0
 jupyter-client==8.6.2
@@ -29,6 +29,7 @@ pexpect==4.9.0
 pickleshare==0.7.5
 prompt-toolkit==3.0.45
 psutil==5.9.8
+psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pycodestyle==2.11.1
 pycparser==2.22
